@@ -211,6 +211,10 @@ atxmega128a1 (\fBo\fP) (\fB*\fP)
 .br
 atxmega128a1revd (\fBo\fP) (\fB*\fP)
 .br
+atxmega128a3 (\fBo\fP) (\fB*\fP)
+.br
+atxmega32a4 (\fBo\fP) (\fB*\fP)
+.br
 atxmega16d4 (\fBo\fP) (\fB*\fP)
 .br
 atxmega128b1 (\fBo\fP) (\fB*\fP)
